src/assets/css/content.css
/* form css */
.form-group {
    position: relative;
  }
  
  .form-group label {
    pointer-events: none;
    background: #fff;
    
    position:absolute;
    left: 15px;;
    top: 15px;;
    transition: 0.2s;
    transition-timing-function: ease;
    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
    opacity:0.5;
  }
  
  input:focus + label, input:not(:placeholder-shown) + label,
  textarea:focus + label, textarea:not(:placeholder-shown) + label {
      opacity: 1;
      transform: scale(0.9) translateY(-120%) translateX(-20px);
      font-size: 20px;
  }

.form-control:focus {
    border-color: var(--primary-color);
    outline: none;
    box-shadow: 0 0 0 0.04rem var(--primary-color);
}


/* form css end */

.img-box {
    width: 250px; 
    height: 200px;
    overflow: hidden;

  }
  
  .img-box img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain; 
    transition: all 0.3s ease-in;
    overflow: hidden;
  }
  .hover{
    transition: all 0.3s ease-in;
    
  }
  .hover:hover .img-box img{
    transform: scale(1.02);
  }
  .product-item{
   transition: all 0.3s ease-in;
  
  }
  .btn-primary{
    background-color: var(--primary-color) !important;
    outline: none !important;
    border: 0 !important;
  }
  p{
    overflow: hidden;
    text-wrap: nowrap;
    text-overflow: ellipsis;
    -webkit-line-clamp: 1 !important;
  }
  .details p{
    overflow: hidden;
    text-wrap: wrap;
    text-overflow: ellipsis;
    -webkit-line-clamp: 1 !important;
  }
  .btn{
    transition: all 0.3s ease;
  }
  .btn:hover{
    transform: scale(1.06);
  }
  .Toastify__toast-container{
    top: 60px;
    z-index: 9999 !important;
    font-family: inherit !important;
  }
  .Toastify__toast{
    font-family: inherit !important;
  }
  .bg-img{
background:linear-gradient(rgb(32 51 100 / .8),rgb(32 51 100 / .8)),url("./images/contactbg.jpg") center center no-repeat;
height: 500px;

background-size: cover;
  }
  .textbox{
  position: absolute;
  top: 50%;
  left: 40%;
  transform: translate(-50%, -50%);

  }

